Truncate the label template on the dashboard (Fixes #4483)

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/new_dashboard.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/new_dashboard.scss
@@ -716,6 +716,7 @@ body {
 }
 
 .pipeline_instance-label {
+  @include ellipsis;
   font-size:   14px;
   font-weight: 500;
   line-height: normal;
